force-app/main/default/objects/Meeting_WF_Action__c/Meeting_WF_Action__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Action</label>
    <nameField>
        <displayFormat>WFA-{00000}</displayFormat>
        <label>Meeting WF Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>