force-app/main/default/objects/Meeting_WF_Action__c/fields/Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Action_Key__c</fullName>
    <description>Meeting WF config</description>
    <label>Action Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>