force-app/main/default/objects/Meeting_WF_Action__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Meeting WF config</description>
    <label>Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>