force-app/main/default/objects/Meeting_WF_Action__c/fields/Requires_Reason__c.field-meta.xml
<CustomField>
    <fullName>Requires_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meeting WF config</description>
    <label>Requires Reason</label>
    <type>Checkbox</type>
</CustomField>