force-app/main/default/objects/Meeting_WF_Action__c/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <description>Meeting WF config</description>
    <label>Target Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>