force-app/main/default/objects/Meeting_WF_Action__c/fields/Validation_Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule_Set__c</fullName>
    <description>Meeting WF config</description>
    <label>Validation Rule Set</label>
    <length>80</length>
    <type>Text</type>
</CustomField>